--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,368 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: 1fr 148px 1fr;
+  justify-items: center;
+  align-items: center;
+  max-width: 1100px;
+  padding: 92px 24px 96px;
+  background-color: #ffffff;
+}
+
+.header__links-list {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+  width: 387px;
+  height: 22px;
+  margin-right: 36px;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  text-decoration: none;
+  list-style: none;
+}
+
+.header__link {
+  text-underline-offset: 4px;
+}
+
+.header__logo {
+  width: 148px;
+  height: 105px;
+}
+
+.header__logo-image {
+  width: 100%;
+}
+
+address {
+  width: 240px;
+  height: 98px;
+  margin-left: 162px;
+  font-family: Raleway, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1.3;
+  text-underline-offset: 4px;
+}
+
+.cover {
+  position: relative;
+  display: flex;
+  width: 1100px;
+  height: 757px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  background-color: rgb(0 0 0 / 0.6);
+}
+
+.cover__title {
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  width: 1000px;
+  height: 355px;
+  margin: 165px 50px 237px;
+  color: white;
+}
+
+.cover__title-letters {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 100px;
+  font-style: normal;
+  line-height: 100%;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+}
+
+.space_between_letters {
+  letter-spacing: 0.6em;
+}
+
+.text-left {
+  line-height: 115%;
+  text-align: start;
+}
+
+.text__zero {
+  letter-spacing: 0em;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: end;
+}
+
+.cover__description {
+  z-index: 2;
+  display: flex;
+  flex-direction: row;
+}
+
+.cover__description-text {
+  position: absolute;
+  top: 667px;
+  left: 82px;
+  width: 635px;
+  height: 28px;
+  color: white;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px; /* identical to box height, or 127% */
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  position: absolute;
+  top: 655px;
+  left: 794px;
+  width: 256px;
+  height: 51px;
+  border: 1px solid #ffffff;
+  padding: 0;
+  color: white;
+  font-weight: 500;
+  font-size: 22px;
+  font-style: normal;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.lots__heading {
+  padding-left: 40px;
+  font-weight: 700;
+  font-size: 40px;
+  font-style: normal;
+  line-height: 47px;
+  text-transform: uppercase;
+}
+
+.lots {
+  width: 1052px;
+  height: 692px;
+  margin: 179px 24px 146px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin-top: 27px;
+  list-style-type: none;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
+  width: 334px;
+  min-height: 563px;
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card__title,
+.card__text {
+  z-index: 2;
+  width: 254px;
+  color: white;
+  font-style: normal;
+}
+
+.card__title {
+  width: 254px;
+  font-weight: 700;
+  font-size: 22px;
+  font-style: normal;
+  line-height: 120%;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.card .card_type_film {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 48px 40px;
+  background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+}
+
+.card .card_type_book {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+}
+
+.card .card_type_picture {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 48px 40px;
+  background-image: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+}
+
+.lots__look-more-link {
+  display: block;
+  padding-top: 30px;
+  padding-left: 40px;
+  font-weight: 400;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 23px;
+  text-underline-offset: 5px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 718px;
+  justify-items: stretch;
+  align-items: center;
+  width: 1052px;
+  height: 595px;
+  margin: 146px 24px 178px;
+}
+
+.about__column_1 {
+  justify-self: center;
+  align-self: start;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  margin-top: 35px;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+  margin: 63px 46px;
+}
+
+.about__column_2 {
+  display: flex;
+  flex-direction: column;
+  gap: 101px;
+  align-self: end;
+  padding-left: 25px;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  font-style: normal;
+  line-height: 47px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  width: 693px;
+  height: 314px;
+  font-weight: 400;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 24px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: space-between;
+  width: 1000px;
+  height: 97px;
+  margin-right: 50px;
+  margin-bottom: 91px;
+  margin-left: 50px;
+}
+
+.footer address {
+  margin-left: 0;
+  line-height: 24px;
+}
+
+.footer__menu-list,
+.footer__social-list {
+  list-style: none;
+}
+
+.footer__menu-list {
+  font-size: 18px;
+  text-align: center;
+  text-underline-offset: 4px;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
