--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,7 @@
   justify-content: center;
   gap: 32px;
   width: 387px;
-  height: 22px;
-  margin-right: 36px;
+  margin-right: 16px;
   font-size: 18px;
   line-height: 21px;
 }
@@ -32,18 +31,13 @@
   text-underline-offset: 4px;
 }
 
-.header__logo {
+.header__logo-image {
   width: 148px;
   height: 105px;
 }
 
-.header__logo-image {
-  width: 100%;
-}
-
 address {
   width: 240px;
-  height: 98px;
   margin-left: 162px;
   font-family: Raleway, sans-serif;
   font-weight: 400;
@@ -56,19 +50,13 @@ address {
 .cover {
   position: relative;
   display: flex;
+  flex-direction: column;
   width: 1100px;
-  height: 757px;
+  min-height: 757px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
-}
-
-.overlay {
-  position: absolute;
-  inset: 0;
-  z-index: 1;
-  background-color: rgb(0 0 0 / 0.6);
 }
 
 .cover__title {
@@ -78,9 +66,51 @@ address {
   gap: 20px;
   box-sizing: border-box;
   width: 1000px;
-  height: 355px;
-  margin: 165px 50px 237px;
+  /* min-height: 355px; */
+  margin: 165px 50px 135px;
   color: white;
+}
+
+.cover__description {
+  z-index: 2;
+  display: flex;
+  flex-direction: row;
+  gap: 77px;
+  margin-left: 82px;
+}
+
+.cover__description-text {
+  align-self: center;
+  width: 635px;
+  color: white;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  width: 256px;
+  min-height: 51px;
+  border: 1px solid #ffffff;
+  padding: 0;
+  color: white;
+  font-weight: 500;
+  font-size: 22px;
+  font-style: normal;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  background-color: rgb(0 0 0 / 0.6);
 }
 
 .cover__title-letters {
@@ -114,45 +144,6 @@ address {
   text-align: end;
 }
 
-.cover__description {
-  z-index: 2;
-  display: flex;
-  flex-direction: row;
-}
-
-.cover__description-text {
-  position: absolute;
-  top: 667px;
-  left: 82px;
-  width: 635px;
-  height: 28px;
-  color: white;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 28px; /* identical to box height, or 127% */
-  text-transform: uppercase;
-  word-spacing: 18px;
-}
-
-.bet-button {
-  position: absolute;
-  top: 655px;
-  left: 794px;
-  width: 256px;
-  height: 51px;
-  border: 1px solid #ffffff;
-  padding: 0;
-  color: white;
-  font-weight: 500;
-  font-size: 22px;
-  font-style: normal;
-  line-height: 26px;
-  text-align: center;
-  text-transform: uppercase;
-  background-color: transparent;
-  cursor: pointer;
-}
-
 .lots__heading {
   padding-left: 40px;
   font-weight: 700;
@@ -164,7 +155,6 @@ address {
 
 .lots {
   width: 1052px;
-  height: 692px;
   margin: 179px 24px 146px;
 }
 
@@ -217,9 +207,13 @@ address {
   display: flex;
   justify-content: space-between;
   height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.card .card_type_film {
+.card_type_film,
+.card_type_book,
+.card_type_picture {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -227,37 +221,22 @@ address {
   width: 100%;
   height: 100%;
   padding: 48px 40px;
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+}
+
+.card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
 }
 
-.card .card_type_book {
-  display: flex;
-  flex-direction: column;
+.card_type_book {
   justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
 }
 
-.card .card_type_picture {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  padding: 48px 40px;
+.card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
 }
 
 .lots__look-more-link {
@@ -277,7 +256,7 @@ address {
   justify-items: stretch;
   align-items: center;
   width: 1052px;
-  height: 595px;
+  min-height: 595px;
   margin: 146px 24px 178px;
 }
 
@@ -321,7 +300,6 @@ address {
   flex-direction: column;
   gap: 26px;
   width: 693px;
-  height: 314px;
   font-weight: 400;
   font-size: 20px;
   font-style: normal;
